# raytracing

./: .gitignore  CMakeLists.txt  README.md  main.c
config/: camera.yaml  world.yaml
src/: algebra.c  algebra.h  bitmap.c  bitmap.h  camera.c  camera.h  config.c  config.h  light.c  light.h  list.c  list.h  main.c  object.c  object.h  plane.c  plane.h  ray_trace.c  ray_trace.h  sphere.c  sphere.h  world.c  world.h
